<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/name_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/NameHint"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/address_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/AddressHint"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/name_EditText"
        />

    <EditText
        android:id="@+id/phone_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/PhonenumberHint"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/address_EditText"
        />

    <Button
        android:id="@+id/button_send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_editText"
        android:onClick="sendMessage"
        />
</android.support.constraint.ConstraintLayout>